src/components/CompositeBar/Item/Item.scss
@use '../../variables';
@use '../../../../styles/mixins';

$block: '.#{variables.$ns}composite-bar-item';

#{$block} {
    @include mixins.accessibility-button;

    $class: &;
    --gn-composite-bar-item-action-size: 36px;

    --_--horizontal-divider-line-color: var(--g-color-line-generic);

    --_--item-background-color-hover: var(--g-color-base-simple-hover);

    --_--item-general-icon-color: var(--g-color-text-primary);
    --_--item-icon-color: var(--g-color-text-misc);
    --_--item-text-color: var(--g-color-text-primary);
    --_--item-collapsed-radius: 7px;

    // selected item
    --_--item-selected-text-color: var(--g-color-text-primary);
    --_--item-selected-background-color-active: var(--g-color-base-selection);

    display: flex;
    min-width: 0;
    width: 100%;
    height: 100%;
    align-items: center;
    cursor: pointer;
    padding: 0;

    &__icon {
        color: var(--gn-aside-header-item-icon-color, var(--_--item-icon-color));

        #{$class}_current & {
            color: var(
                --gn-aside-header-item-current-icon-color,
                var(--gn-aside-header-item-icon-color, var(--_--item-icon-color))
            );
        }

        .#{variables.$ns}footer-item &,
        .#{variables.$ns}composite-bar-highlighted-item &,
        .#{variables.$ns}composite-bar_subheader & {
            color: var(
                --gn-aside-header-general-item-icon-color,
                var(--_--item-general-icon-color)
            );
        }

        .#{variables.$ns}footer-item#{$class}_current &,
        .#{variables.$ns}composite-bar-highlighted-item#{$class}_current &,
        .#{variables.$ns}composite-bar_subheader #{$class}_current & {
            color: var(
                --gn-aside-header-item-current-icon-color,
                var(--gn-aside-header-general-item-icon-color, var(--_--item-general-icon-color))
            );
        }

        // FIXME: fix hack in the next major
        &-tooltip .g-action-tooltip__description {
            color: var(--g-color-text-light-primary);
            margin-block-start: 0px;
        }
    }

    &__icon-place {
        flex-shrink: 0;
        width: var(--gn-aside-header-min-width);
        display: flex;
        align-items: center;
        justify-content: center;
        height: 100%;
    }

    &__title {
        display: flex;
        align-items: center;
        overflow: hidden;
        margin-right: 16px;
    }

    &__title-text {
        /* stylelint-disable-next-line value-no-vendor-prefix */
        display: -webkit-box;
        -webkit-box-orient: vertical;
        /* NOTE @vladimir-kuba: 2 lines fits in container height, more lines leads overflow container */
        -webkit-line-clamp: 2;
        overflow: hidden;

        color: var(--gn-aside-header-item-text-color, var(--_--item-text-color));

        #{$class}_current & {
            color: var(
                --gn-aside-header-item-current-text-color,
                var(--_--item-selected-text-color)
            );
        }
    }

    &__title-adornment {
        margin: 0 10px;
    }

    &__collapse-item {
        @include mixins.accessibility-button;

        --_--item-icon-color: var(--g-color-text-misc);

        display: flex;
        padding: 0 16px;
        align-items: center;
        width: 100%;
        height: 100%;
        cursor: pointer;

        &-icon {
            color: var(--gn-aside-header-item-icon-color, var(--_--item-icon-color));
            margin-right: 10px;
        }

        #{$class}__title-adornment {
            margin-right: 0;
        }
    }

    &__menu-divider {
        margin: 0 8px;
        width: 100%;
        border-top: 1px solid
            var(--gn-aside-header-divider-horizontal-color, var(--_--horizontal-divider-line-color));
        cursor: default;
    }

    &__collapse-items-popup-content {
        padding: 4px 0;
    }

    &__link {
        display: flex;
        width: 100%;
        height: 100%;
        align-items: center;

        &,
        &:hover,
        &:active,
        &:visited,
        &:focus {
            text-decoration: none;
            outline: none;
            color: inherit;
        }
    }

    &__btn-icon {
        width: 100%;
        height: 100%;
        display: flex;
        align-items: center;
        justify-content: center;
    }

    &_type_action {
        justify-content: center;
        height: var(--gn-composite-bar-item-action-size);
        margin: 0 10px 8px;
        background: var(--g-color-base-float);
        box-shadow:
            0px 0px 0px 1px rgba(0, 0, 0, 0.03),
            0px 5px 6px rgba(0, 0, 0, 0.12);
        border-radius: var(--gn-composite-bar-item-action-size);
        transition:
            transform 0.1s ease-out,
            background-color 0.15s linear;

        &:focus-visible {
            box-shadow: 0 0 0 2px var(--g-color-line-misc);
        }

        &:hover {
            background-color: var(--g-color-base-float-hover);
        }

        &:active {
            box-shadow: 0 1px 2px var(--g-color-sfx-shadow);
            transition: none;
            transform: scale(0.96);
        }

        & #{$class}__icon-place {
            width: var(--gn-composite-bar-item-action-size);
        }
    }

    &__icon-tooltip_item-type_action {
        margin-left: 10px;
    }

    &:not(&_compact) {
        &#{$class}_current {
            &#{$class}_type_regular {
                background-color: var(
                    --gn-aside-header-item-current-background-color,
                    var(--_--item-selected-background-color-active)
                );

                border-radius: var(--gn-aside-header-item-expanded-radius);
            }
        }

        &:hover {
            &#{$class}_type_regular {
                background-color: var(
                    --gn-aside-header-item-current-background-color-hover,
                    var(
                        --gn-aside-header-item-current-background-color,
                        var(--_--item-selected-background-color-active)
                    )
                );

                border-radius: var(--gn-aside-header-item-expanded-radius);
            }
        }

        &:not(#{$class}_current):hover {
            &#{$class}_type_regular {
                background-color: var(
                    --gn-aside-header-item-background-color-hover,
                    var(--_--item-background-color-hover)
                );

                border-radius: var(--gn-aside-header-item-expanded-radius);
            }
        }
    }

    &_compact {
        @mixin item-bg {
            position: relative;
            background-color: transparent;

            &::before {
                content: '';
                position: absolute;
                top: 50%;
                left: 50%;
                z-index: -1;
                width: var(
                    --gn-aside-header-item-icon-background-size,
                    var(--_--item-icon-background-size)
                );
                height: var(
                    --gn-aside-header-item-icon-background-size,
                    var(--_--item-icon-background-size)
                );
                margin-top: -19px;
                margin-left: -19px;
                border-radius: var(
                    --gn-aside-header-item-collapsed-radius,
                    var(--_--item-collapsed-radius)
                );
            }
        }

        &#{$class}_type_action {
            width: var(--gn-composite-bar-item-action-size);

            & #{$class}__title {
                margin: 0;
            }
        }

        &#{$class}_current {
            &#{$class}_type_regular {
                #{$class}__btn-icon {
                    @include item-bg();

                    &::before {
                        background-color: var(
                            --gn-aside-header-item-current-background-color,
                            var(--_--item-selected-background-color-active)
                        );
                    }
                }
            }
        }

        &:hover {
            &#{$class}_type_regular {
                #{$class}__btn-icon {
                    @include item-bg();

                    &::before {
                        background-color: var(
                            --gn-aside-header-item-current-background-color-hover,
                            var(
                                --gn-aside-header-item-current-background-color,
                                var(--_--item-selected-background-color-active)
                            )
                        );
                    }
                }
            }
        }

        &:not(#{$class}_current):hover {
            &#{$class}_type_regular {
                #{$class}__btn-icon {
                    @include item-bg();

                    &::before {
                        background-color: var(
                            --gn-aside-header-item-background-color-hover,
                            var(--_--item-background-color-hover)
                        );
                    }
                }
            }
        }
    }
}

